@@ -74,10 +74,12 @@ schema = Schema((
             ),
         columns=("set", "code"),
         required_for_published=True,
+        searchable = True,
         validators=('unique_specification_code',),
         ),
     StringField(
         name='source_code',
+        searchable = True,
         widget=StringField._properties['widget'](
             label="Source code",
             label_msgid='indicators_label_source_code',
@@ -86,6 +88,7 @@ schema = Schema((
     ),
     StringField(
         name='data_source_providers',
+        searchable = True,
         widget=StringField._properties['widget'](
             label="Data Source Providers",
             label_msgid='indicators_label_data_source_providers',
@@ -110,6 +113,7 @@ schema = Schema((
     ),
     TextField(
         name='data_source_info',
+        searchable = True,
         widget=TextAreaWidget(
             label="Data source info",
             label_msgid='indicators_label_data_source_info',
@@ -118,6 +122,7 @@ schema = Schema((
     ),
     TextField(
         name='priority_data_flows',
+        searchable = True,
         widget=TextAreaWidget(
             label="Priority data flows",
             label_msgid='indicators_label_priority_data_flows',
@@ -126,6 +131,7 @@ schema = Schema((
     ),
     StringField(
         name='policy_question',
+        searchable = True,
         widget=StringField._properties['widget'](
             label="Policy Question",
             label_msgid='indicators_label_policy_question',
